[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Images/Main Menu/Scenes/Scripts/title_screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/Main Menu/pngs/simple_gradient.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/Main Menu/pngs/GenomeEvolutionLogo-01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/Main Menu/Scenes/Buttons/NewGameButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Images/Main Menu/Scenes/Buttons/TutoralButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Images/Main Menu/Scenes/Buttons/SettingsButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Images/Main Menu/Scenes/Buttons/ExitButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Images/Main Menu/Scenes/FadeIn.tscn" type="PackedScene" id=8]

[node name="TitleScreen" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="Menu" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 100.0
margin_right = -50.0
margin_bottom = -100.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="Logo" type="TextureRect" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1500.0
margin_bottom = 250.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource( 3 )
stretch_mode = 6
_sections_unfolded = [ "Rect", "Size Flags" ]

[node name="CenterRow" type="HBoxContainer" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 254.0
margin_right = 1500.0
margin_bottom = 700.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1500.0
margin_bottom = 446.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
alignment = 1
_sections_unfolded = [ "Visibility", "custom_constants" ]

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" index="0" instance=ExtResource( 4 )]

margin_left = 500.0
margin_top = 51.0
margin_right = 1000.0
margin_bottom = 131.0

[node name="TutoralButton" parent="Menu/CenterRow/Buttons" index="1" instance=ExtResource( 5 )]

margin_left = 500.0
margin_top = 139.0
margin_right = 1000.0
margin_bottom = 219.0

[node name="SettingsButton" parent="Menu/CenterRow/Buttons" index="2" instance=ExtResource( 6 )]

margin_left = 500.0
margin_top = 227.0
margin_right = 1000.0
margin_bottom = 307.0

[node name="ExitButton" parent="Menu/CenterRow/Buttons" index="3" instance=ExtResource( 7 )]

margin_left = 500.0
margin_top = 315.0
margin_right = 1000.0
margin_bottom = 395.0

[node name="nudResRate" type="SpinBox" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 996.0
margin_top = 447.0
margin_right = 1099.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 10.0
step = 0.05
page = 0.0
value = 0.25
exp_edit = false
rounded = false
editable = true
prefix = ""
suffix = ""

[node name="Label" type="Label" parent="nudResRate" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -3.0
margin_top = -19.0
margin_right = 199.0
margin_bottom = -1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 1
text = "Resource Consumption Rate"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_constants" ]

[node name="FadeIn" parent="." index="3" instance=ExtResource( 8 )]

visible = false

[connection signal="value_changed" from="nudResRate" to="." method="_on_nudResRate_value_changed"]

[connection signal="fade_in_finished" from="FadeIn" to="." method="_on_FadeIn_fade_in_finished"]


